# Agent

./: .env.example  .gitignore  agent.py  main.py  pyproject.toml  tools.py
app/: __init__.py  cli.py  config.py
entities/agent/: __init__.py  actors.py
entities/workspace/: __init__.py  models.py
fractal_system/: agents.py  engine.py  logger.py  models.py  tools.py
processes/fractal_irac/: __init__.py  nodes.py  workflow.py
ref/: .gitignore  MANIFEST.yaml  README.md  validate_structure.py
ref/architecture/: OVERVIEW.md  RUN_LIFECYCLE.md
ref/config/: agents.yaml  graph.yaml  tool_policy.yaml
ref/examples/fire_compartment/: README.md  workspace.seed.json
ref/prompts/: refinery.md  root_agent.md  subagent.md  tool_use.md
ref/runbooks/: tool_enabled_irac_run.md
ref/schemas/: workspace.schema.json
ref/tools/: README.md  contracts.yaml
shared/logger/: __init__.py
shared/tools/: __init__.py  example_tools.py  tool_wrapper.py
